Fix stage delete button in dark mode

--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -414,6 +414,7 @@ input.number {
   min-width: auto;
   border-radius: 0px 3px 3px 0px;
   border: 1px solid var(--c-border);
+  fill: var(--c-text);
 }
 
 .stage-delete button:hover {
